--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  /* line-height: 1.5;
-  font-weight: 400; */
 
   color-scheme: light dark;
   color: rgba(46, 44, 44, 0.87);
@@ -14,49 +12,166 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   padding: 0;
-  /* display: flex;
-  place-items: center; */
-  /* min-width: 320px;
-  min-height: 100vh; */
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: white;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#root {
+  margin: auto;
+  text-align: center;
+}
+
+main {
+  min-height: calc(100vh - 110px);
+}
+
+.cards {
+  display: inline-block;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 200px;
+  height: 300px;
+  margin: 20px;
+  background-color: rgb(221, 189, 211);
+  padding: 0px;
+  position: relative;
+}
+
+header, footer {
+  width: 100%;
+  background-color: #333;
+  color: white;
+  height: 55px;
+}
+
+header { 
+  display: flex;
+  align-items: center;
+  text-align: left;
+  padding-left: 20px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+body {
+  font-family: 'Comfortaa', sans-serif;
+  text-align: center;
+}
+
+.img_pokemon {
+  width: 100%;
+  object-fit: cover;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  padding: 10px 10px 0px 10px;
+}
+
+.box {
+  width: 11rem;
+  background-color: aliceblue;
+  text-align: center;
+  position: relative;
+  text-align: center;
+}
+
+.material-symbols-outlined {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  background-color: rgb(97, 98, 99);
+  padding: 10px;
+  border-radius: 0 0 0 20px;
+  color: aliceblue;
+}
+
+img {
+  width: 100%;
+  object-fit: cover;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  padding: 0px;
+}
+
+img:hover {
+  -webkit-filter: grayscale(0%);
+  filter: grayscale(0%);
+}
+
+/* .box:hover .number {
+  background-color: rgb(65, 115, 240);
+} */
+
+input {
+  width: 250px;
+  margin-bottom: 50px;
+  padding: 6px;
+  border: none;
+  font-size: 17px;
+  border-style: groove;
+  border-width: 1px;
+  border-color: black;
+  border-radius: 5px;
+}
+
+h2 {
+  background-color: rgb(97, 98, 99);
+  color: aliceblue;
+}
+
+.types {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 5px 10px 5px 10px;
+  background-color: rgb(28, 49, 73);
+  color: aliceblue;
+  font-size: 13px;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #7ee364;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
 }
 
-@media (prefers-color-scheme: light) {
+button:hover {
+  background-color: white;
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+}
+
+
+
+
+
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -64,7 +179,4 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+} */
