--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
   color-scheme: light dark;
   color: rgba(46, 44, 44, 0.87);
-  background-color: #484544;
+  background-color: #908f8e;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -12,47 +12,67 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  color: white;
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-#root {
-  margin: auto;
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
 }
 
 main {
-  min-height: calc(100vh - 110px);
+  min-height: calc(100vh - 110px);  
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+  color: white;
+  margin: 20px;
+}
+
+.title {
+  color: #333;
+}
+
+#root {
+  text-align: center;
 }
 
 .cards {
   display: inline-block;
+  margin: auto;
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
+  justify-items: center;
   width: 200px;
-  height: 300px;
-  margin: 20px;
+  height: 310px;
+  margin: 10px;
   background-color: rgb(221, 189, 211);
   padding: 0px;
   position: relative;
+}
+
+.material-symbols-outlined {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  background-color: rgb(97, 98, 99);
+  padding: 10px;
+  border-radius: 0 0 0 20px;
+  color: aliceblue;
 }
 
 header, footer {
@@ -76,38 +96,7 @@ footer {
   align-items: center;
 }
 
-body {
-  font-family: 'Comfortaa', sans-serif;
-  text-align: center;
-}
-
-.img_pokemon {
-  width: 100%;
-  object-fit: cover;
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-  padding: 10px 10px 0px 10px;
-}
-
-.box {
-  width: 11rem;
-  background-color: aliceblue;
-  text-align: center;
-  position: relative;
-  text-align: center;
-}
-
-.material-symbols-outlined {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  background-color: rgb(97, 98, 99);
-  padding: 10px;
-  border-radius: 0 0 0 20px;
-  color: aliceblue;
-}
-
-img {
+.fox {
   width: 100%;
   object-fit: cover;
   -webkit-filter: grayscale(100%);
@@ -120,13 +109,26 @@ img:hover {
   filter: grayscale(0%);
 }
 
-/* .box:hover .number {
-  background-color: rgb(65, 115, 240);
-} */
+.line_heart {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+span {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+}
+
+.heart {
+  width: 35px;
+  margin: 0px 10px 0px 10px;
+}
 
 input {
   width: 250px;
-  margin-bottom: 50px;
   padding: 6px;
   border: none;
   font-size: 17px;
@@ -134,32 +136,19 @@ input {
   border-width: 1px;
   border-color: black;
   border-radius: 5px;
+  margin-top: 10px;
 }
 
-h2 {
-  background-color: rgb(97, 98, 99);
-  color: aliceblue;
-}
-
-.types {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 5px 10px 5px 10px;
-  background-color: rgb(28, 49, 73);
-  color: aliceblue;
-  font-size: 13px;
-}
-
-button {
+.plus, .minus {
   background-color: #333;
   color: white;
+  margin: 10px;
   padding: 10px;
   border-radius: 5px;
   border: none;
 }
 
-button:hover {
+.plus:hover, .minus:hover {
   background-color: white;
   color: black;
   padding: 10px;
