--- a/src/index.css
+++ b/src/index.css
@@ -38,10 +38,6 @@ h1 {
   margin: 20px;
 }
 
-.title {
-  color: #333;
-}
-
 #root {
   text-align: center;
 }
@@ -56,7 +52,6 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
   justify-items: center;
   width: 200px;
   height: 310px;
@@ -75,8 +70,8 @@ h1 {
   position: absolute;
   top: 0px;
   right: 0px;
-  background-color: rgb(234, 237, 239);
-  padding: 10px;
+  background-color: rgb(240, 240, 240);
+  padding: 7px;
   border-radius: 0 0 0 20px;
   color: #333;
 }
@@ -130,14 +125,11 @@ footer {
 }
 
 span {
-  display: flex;
-  align-items: center;
   font-size: 20px;
 }
 
 .heart {
   width: 35px;
-  margin: 0px 10px 0px 10px;
 }
 
 input {
@@ -147,9 +139,9 @@ input {
   font-size: 17px;
   border-style: groove;
   border-width: 1px;
-  border-color: black;
+  border-color: rgb(237, 232, 232);
   border-radius: 5px;
-  margin-top: 10px;
+  margin: 10px;
 }
 
 .plus, .minus {
@@ -161,24 +153,27 @@ input {
   border: none;
 }
 
-.plus:hover, .minus:hover {
-  background-color: rgb(216, 100, 100);
+.plus:hover {
+  background-color: rgb(70, 223, 104);
   color: black;
   padding: 10px;
   border-radius: 5px;
   border: none;
 }
 
+.minus:hover {
+  background-color: rgb(240, 125, 90);
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+}
 
-
-
-
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-} */
+.likes {
+  width: 4.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  font-size: 18px;
+}
