--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,6 @@ h1 {
   color: white;
 }
 
-
 header, footer {
   width: 100%;
   background-color: #333;
@@ -172,4 +171,40 @@ input {
   align-items: center;
   justify-content: space-around;
   font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a.active {
+  color: red;
+  border-bottom: 1px solid red;
+}
+
+.home {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.img_animals {
+  margin: 5px;
+  height: 30rem;
+  width: 18rem;
+  background-image: url('https://images.unsplash.com/photo-1606287201181-42f1340c1306');
+  background-size: cover;
+  font-size: 20px;
+  color: #333;
+}
+
+.img_birds {
+  margin: 5px;
+  height: 30rem;
+  width: 18rem;
+  background-image: url('https://images.unsplash.com/photo-1542382156909-9ae37b3f56fd');
+  background-size: cover;
+  font-size: 20px;
+  color: #333;
 }
