--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-
+  font-family: 'Montserrat', sans-serif;
   color-scheme: light dark;
   color: rgba(46, 44, 44, 0.87);
   background-color: #908f8e;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -27,7 +25,7 @@ main {
   min-height: calc(100vh - 110px);  
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
 }
 
 h1 {
@@ -53,7 +51,7 @@ h1 {
   justify-content: space-between;
   justify-items: center;
   width: 200px;
-  height: 310px;
+  height: 330px;
   margin: 10px;
   background-color: white;
   padding: 0px;
@@ -116,6 +114,12 @@ footer {
   filter: saturate(1.5);
 }
 
+.card:hover .heart {
+  -webkit-filter: grayscale(0%);
+  filter: grayscale(0%);
+  filter: saturate(1.1);
+}
+
 .line_heart {
   display: flex;
   flex-wrap: wrap;
@@ -125,6 +129,8 @@ footer {
 
 .heart {
   width: 35px;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
 
 input {
@@ -175,18 +181,20 @@ input {
 
 a {
   text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
 
 a.active {
-  color: red;
-  border-bottom: 1px solid red;
+  border-bottom: 3px solid;
 }
 
 .home {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
+  flex-direction: row;
+  margin: auto;
 }
 
 .img_animals {
@@ -199,12 +207,46 @@ a.active {
   color: #333;
 }
 
+.img_animals:hover {
+  box-shadow: 0px 0px 20px #c5c4c4;
+}
+
 .img_birds {
   margin: 5px;
   height: 30rem;
   width: 18rem;
-  background-image: url('https://images.unsplash.com/photo-1542382156909-9ae37b3f56fd');
+  background-image: url('https://images.unsplash.com/photo-1552943273-ba7dedee6d44');
+  text-align: center;
   background-size: cover;
+  background-position: center;
   font-size: 20px;
   color: #333;
+}
+
+.img_birds:hover {
+  box-shadow: 0px 0px 20px #c5c4c4;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin-right: 30px;
+  list-style-type: none;
+}
+
+.see {
+  margin-bottom: 10px;
+}
+
+.see a {
+  color: blue;
+}
+
+.see a:hover {
+  color: rgb(215, 22, 25);
+}
+
+.back {
+  margin: 20px;
 }
